<resources>
    <string name="app_name">Calculadora IMC</string>
    <!--Títulos-->
    <string name="tit_inicio">Calculadora de IMC</string>
    <string name="tit_datos_imc">Ingresa tus datos</string>
    <string name="tit_imc_calculado">Tu IMC es:</string>
    <string name="tit_historial">Historial</string>
    <!--Botones-->
    <string name="btn_calcular_imc_s">Calcular IMC</string>
    <string name="btn_ver_historial_s">Ver historial</string>
    <string name="btn_ver_grafica_s">Ver gráfica</string>
    <string name="btn_actualizar_s">Calcular IMC</string>


    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="title_activity_historia_imc">Historia IMC</string>
    <!--DatosIMC-->
    <string name="ingresaaltura" translatable="false">Ingresa tu altura en metros</string>
    <string name="hint_altura" translatable="false">Ej. 1.63</string>
    <string name="ingresapeso" translatable="false">Ingresa tu peso en kg</string>
    <string name="hint_peso" translatable="false">Ej. 59.2</string>
    <!--Resultados-->
    <string name="bajo" translatable="false">Bajo</string>
    <string name="normal" translatable="false">Normal</string>
    <string name="sobrepeso" translatable="false">Sobrepeso</string>
    <string name="obesidad" translatable="false">Obesidad</string>
    <string name="bajom" translatable="false">(&lt;18.5)</string>
    <string name="normalm" translatable="false">(18.5-25)</string>
    <string name="sobrepesom" translatable="false">(25-30)</string>
    <string name="obesom" translatable="false">(&gt;30)</string>
    <!--Historial-->
    <string name="verhistorial" translatable="false">Ver historial</string>
    <string name="imcigual" translatable="false">IMC=</string>
    <string name="pesoigual" translatable="false">Peso=</string>
    <string name="alturaigual" translatable="false">Altura=</string>
    <string name="kilogramos" translatable="false">kg</string>
    <string name="metros" translatable="false">m</string>
    <!--Gráfica-->
    <string name="vergrafica" translatable="false">Ver gráfica</string>
    <!--Editar-->
    <string name="editarregistro" translatable="false">Editar Registro</string>
    <string name="actualizar" translatable="false">Actualizar</string>
    <string name="fecha" translatable="false">Fecha</string>
</resources>