<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_fondo3"
    tools:context=".DatosIMC">

    <TextView
        android:id="@+id/tv_bk_datosIMC"
        android:layout_width="359dp"
        android:layout_height="487dp"
        android:background="@drawable/redonde"
        android:backgroundTint="#68FFFFFF"
        android:shadowRadius="20"
        android:textSize="14sp"
        app:circularflow_radiusInDP="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.733" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/tit_datos_imc"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_bk_datosIMC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.544" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/ingresaaltura"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_bk_datosIMC"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/tv_bk_datosIMC"
        app:layout_constraintTop_toTopOf="@+id/tv_bk_datosIMC" />

    <EditText
        android:id="@+id/et_altura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/redonde"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/hint_altura"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_bk_datosIMC"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="@+id/tv_bk_datosIMC"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="189dp"
        android:layout_height="29dp"
        android:layout_marginTop="36dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/ingresapeso"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tv_bk_datosIMC"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/tv_bk_datosIMC"
        app:layout_constraintTop_toBottomOf="@+id/et_altura" />

    <EditText
        android:id="@+id/et_peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/redonde"
        android:backgroundTint="@color/white"
        android:ellipsize="middle"
        android:ems="10"
        android:hint="@string/hint_peso"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_bk_datosIMC"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="@+id/tv_bk_datosIMC"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/btn_calcular_IMC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/btn_calcular_imc_s"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:backgroundTint="@color/pink"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_bk_datosIMC"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/tv_bk_datosIMC"
        app:layout_constraintTop_toBottomOf="@+id/et_peso" />

    <Button
        android:id="@+id/btn_d_ir_historial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/verhistorial"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:backgroundTint="@color/pink"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_bk_datosIMC"
        app:layout_constraintStart_toStartOf="@+id/tv_bk_datosIMC"
        app:layout_constraintTop_toBottomOf="@+id/btn_calcular_IMC" />

    <ImageButton
        android:id="@+id/btnimg_atras_datos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24"
        tools:ignore="SpeakableTextPresentCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>